--- a/blueprint/wp-content/themes/twentytwelve-blueprint/style.css
+++ b/blueprint/wp-content/themes/twentytwelve-blueprint/style.css
@@ -2282,8 +2282,7 @@ aside.pqRight:after {
 		width: auto;
 	}
 	.commentlist .children {
-		margin-left: 48px;
-		margin-left: 3.428571429rem;
+		margin-left: 73px;
 	}
 	.home .logo,
 	.single-issue .logo {
